--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ amplifyconfiguration*
 docker-compose-examples
 
 terraform.tfstate
+.terraform/providers/registry.terraform.io/hashicorp/aws/5.94.1/linux_amd64/terraform-provider-aws_v5.94.1_x5
