--- a/.gitignore
+++ b/.gitignore
@@ -29,5 +29,6 @@ amplify_outputs*
 amplifyconfiguration*
 docker-compose-examples
 
+.terraform 
 terraform.tfstate
-.terraform/providers/registry.terraform.io/hashicorp/aws/5.94.1/linux_amd64/terraform-provider-aws_v5.94.1_x5
+.terraform.lock.hcl
