--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,50 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
+.dockerignore
 node_modules
-dist
-dist-ssr
-*.local
+.terraform
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
+# Crash reports from NativeScript
+report-ios
+report-android
+
+# Compiled NativeScript application resource files
+**/*.css
+**/*.js
+**/*.map
+**/*.scss
+**/*.less
+**/*.ts
+**/*.sass
+
+# Compiled TypeScript output
+**/*.js.map
+
+# NativeScript snapshots
+app/config/snapshots
+
+# Temporary files
+*~
+*.swp
+
+# Editors & IDEs
 .idea
+.vscode
+*.tmproj
+*.sublime*
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
 
-# amplify
-.amplify
-amplify_outputs*
-amplifyconfiguration*
-docker-compose-examples
+# Log files
+*.log
 
-.terraform 
-terraform.tfstate
-.terraform.lock.hcl
+# Dependency directories
+jspm_packages/
+bower_components/
+
+# Compiled binary files
+*.apk
+*.ipa
+
+# Compiled web assembly files
+*.wasm
+
+# Terraform files
+.terraform/
