--- a/.gitignore
+++ b/.gitignore
@@ -1,50 +1,34 @@
-.dockerignore
-node_modules
-.terraform
-
-# Crash reports from NativeScript
-report-ios
-report-android
-
-# Compiled NativeScript application resource files
-**/*.css
-**/*.js
-**/*.map
-**/*.scss
-**/*.less
-**/*.ts
-**/*.sass
-
-# Compiled TypeScript output
-**/*.js.map
-
-# NativeScript snapshots
-app/config/snapshots
-
-# Temporary files
-*~
-*.swp
-
-# Editors & IDEs
-.idea
-.vscode
-*.tmproj
-*.sublime*
-.DS_Store
-
-# Log files
+# Logs
+logs
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Dependency directories
-jspm_packages/
-bower_components/
+node_modules
+dist
+dist-ssr
+*.local
 
-# Compiled binary files
-*.apk
-*.ipa
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
-# Compiled web assembly files
-*.wasm
+# amplify
+.amplify
+amplify_outputs*
+amplifyconfiguration*
+docker-compose-examples
 
-# Terraform files
-.terraform/
+.terraform 
+terraform.tfstate
+.terraform.lock.hcl
