--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - ./frontend:/app
     environment:
       - CHOKIDAR_USEPOLLING=true
+    env_file:
+      - ./.env
     # Ensure frontend starts after backend (optional but good practice)
     depends_on:
       - backend
@@ -26,6 +28,6 @@ services:
       # Exclude node_modules from being overwritten by the volume mount
       - /usr/src/app/node_modules
     env_file:
-      - ./backend/.env # Load environment variables from .env file
+      - ./.env # Load environment variables from .env file
     # Add command for hot-reloading if desired (e.g., using nodemon)
     # command: npm run dev # Assuming you add a "dev" script to backend/package.json
