--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "@aws-sdk/client-dynamodb": "^3.788.0",
     "@aws-sdk/lib-dynamodb": "^3.789.0",
     "axios": "^1.8.4",
+    "connect-dynamodb": "^3.0.5",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
